# reels-generator

./: .env.example  .gitignore  README.md  REELS PIPELINE SPEC.md  WEB_APP_SPEC.md  config.yaml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: launch.json
assets/fonts/: README.md
docs/agdr/: AgDR-0001-adopt-shadcn-ui-for-reels-studio.md  AgDR-0002-in-memory-job-reattachment.md  AgDR-0003-ending-sound-audio-mix.md  AgDR-0004-transcript-editing.md  AgDR-0005-color-picker.md
docs/superpowers/plans/: 2026-07-18-silence-remover.md  2026-07-19-web-ui-only.md
docs/superpowers/specs/: 2026-07-18-silence-removal-design.md  2026-07-19-cinema-dark-rebrand-design.md  2026-07-19-web-ui-only-design.md
src/reels/application/: manifest.py  pipeline.py  pipeline_stage.py  run_options.py
src/reels/application/ports/: caption_normalizer.py  caption_renderer.py  manifest_repository.py  media_environment.py  segment_cutter.py  sidecar_writer.py  silence_detector.py  transcript_repository.py  video_editor.py
src/reels/application/queries/: video_queries.py
src/reels/application/use_cases/: brand_reels.py  caption_clips.py  cut_clips.py  edit_transcript.py  ingest_videos.py  package_reels.py  plan_layout.py  reel_editing.py  reframe_clips.py  remove_silence.py  select_clips.py  transcribe_video.py
src/reels/domain/reel/: clip_selection.py  clip_selector.py  layout_plan.py  presenter_detector.py  reel.py
src/reels/domain/services/: clip_reconciliation.py  presenter_crop_planner.py
src/reels/domain/shared/: exceptions.py  value_objects.py
src/reels/domain/silence_removal/: keep_segments.py
src/reels/domain/source_video/: repository.py  source_video.py  video_metadata.py  video_prober.py
src/reels/domain/transcript/: transcriber.py  transcript.py
src/reels/infrastructure/captions/: ass_subtitle_builder.py  libass_caption_renderer.py  text_direction.py
src/reels/infrastructure/config/: settings.py
src/reels/infrastructure/detection/: opencv_presenter_detector.py
src/reels/infrastructure/ffmpeg/: ffmpeg_media_environment.py  ffmpeg_segment_cutter.py  ffmpeg_silence_detector.py  ffmpeg_video_editor.py  ffprobe_video_prober.py  preview.py
src/reels/infrastructure/llm/: claude_clip_selector.py  clip_json.py  errors.py  lazy.py  lazy_normalizer.py  llm_caption_normalizer.py  openai_compatible_clip_selector.py  prompts.py  provider_profiles.py
src/reels/infrastructure/persistence/: file_sidecar_writer.py  filesystem_video_library.py  json_manifest_repository.py  json_transcript_repository.py
src/reels/infrastructure/transcription/: faster_whisper_transcriber.py
src/reels/presentation/: cli.py  container.py
src/reels/presentation/api/: app.py  jobs.py  schemas.py  state.py
src/reels/presentation/api/routers/: jobs.py  silence.py  system.py  videos.py
tests/api/: test_reel_media_caching.py  test_silence_api.py
tests/application/: test_brand_reels.py  test_caption_clips.py  test_edit_transcript.py  test_reel_editing.py  test_remove_silence.py  test_resume_stage.py  test_select_clips.py
tests/caption_harness/: render_harness.py  tricky_lines.py
tests/domain/: test_clip_reconciliation.py  test_keep_segments.py  test_presenter_crop_planner.py  test_transcript.py  test_value_objects.py
tests/infrastructure/: test_ass_subtitle_builder.py  test_clip_json.py  test_ending_sound_filtergraph.py  test_segments_filtergraph.py  test_silencedetect_parser.py  test_text_direction.py
tests/presentation/: test_cli.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ColorField.tsx  ConfigEditor.tsx  Dashboard.tsx  Doctor.tsx  EmptyState.tsx  Gallery.tsx  JobProgress.tsx  Library.tsx  Logo.tsx  PipelineStepper.tsx  ReelCard.tsx  ReelDetail.tsx  ReelInspector.tsx  ReelPipeline.tsx  SilenceRemover.tsx  StageProgress.tsx  Timeline.tsx  TranscriptView.tsx  TrimSlider.tsx  VideoCard.tsx  VideoDetail.tsx
web/src/lib/: api.ts  assColor.ts
